kaptcha实现验证码，实现请求工具类

--- a/src/main/webapp/WEB-INF/html/shop/shopedit.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopedit.html
@@ -106,7 +106,18 @@
 						</div>
 					</li>
 					<!--验证码-->
-
+					<li>
+						<div class="item-content">
+							<div class="item-media"><i class="icon icon-form-name"></i></div>
+							<div class="item-inner">
+								<div class="item-title label">验证码</div>
+									<input id="kaptcha" name="captcha" placeholder="验证码"/>
+								<div class="item-input">
+									<img src="../Kaptcha" id="kaptcha_img" alt="点击更换" title="点击更换"/>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 			<div class="content-block">
@@ -124,6 +135,7 @@
 		<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 		<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 		<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+		<script type="text/javascript" src="../resources/js/common/commonutils.js"></script>
 		<script type="text/javascript" src="../resources/js/shop/shopedit.js"></script>
 	</body>
 
